fix:permission layout broke left main menu

--- a/Frontend/src/app/modules/permissions/permissions.component.scss
+++ b/Frontend/src/app/modules/permissions/permissions.component.scss
@@ -2,9 +2,10 @@
 
 :host ::ng-deep {
   // fix that cards are over the main nav
-  .mat-tab-body.mat-tab-body-active {
-    z-index: 100;
-  }
+  // will break the left main nav
+  /*.mat-tab-body.mat-tab-body-active {
+    z-index: 97;
+  }*/
 }
 mat-tab-group {
   position: absolute;
